--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>17</java.version>
 		<springfox-swagger.version>2.9.2</springfox-swagger.version>
 		<modelmapper.version>3.1.0</modelmapper.version>
+		<testcontainers.version>1.17.4</testcontainers.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -72,6 +73,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
